    - refactors of various small parts
    - refactor of command system; everything is broken

    Commands:
        - added /blockinfo command giving information about the block currently looking at
        - added /recipeview command for below recipe view
        - /execute has now a registry-like structure for sub-nodes
        - /execute in takes now a dimension name instead of its ID

    Rendering:
        - improved block rendering

    Server:
        - improved server separation from client

    Crafting:
        - added a screen system for displaying recipes, with extension point for mods, with plans for features
            like in JEI
        - rewritten base recipe API

    Documentation:
        - fixed documentation generation
        - updated & improved docs

    API:
        - ItemFactory is now also created by FactoryBuilder
        - this is breaking existing code, again...
        - added a new combined factory system using in-memory calculations

    Fixed issues:
        - escaping in logs did not work in some edge cases correctly
        - major rendering issue when updating blocks
        - recipes were not working [MAYBE]
        - some work on block state alias system [still broken :-(]
        - fixed reload issues and general issues with in-memory data propitiation not over the default interface


changelog of snapshot 21w01a, released on 06.01.2021, targeting 20w51a
    Happy new year, 2021!
    This time, breaks again some big parts
    Affected are world generation and mod loading stage modifications, and loading-order-dependent stuff, beside
        following some general structure [block models after blocks, etc.]

    WARNING: this version has a major visual glitch which could not be fixed until today

    API:
        If you see this, you know that something broke again...
        - Broke BlockFactory system. Nothing will work!
        - Planning on breaking ItemFactory also...