@@ -136,7 +136,9 @@ class World(mcpython.common.world.AbstractInterface.IWorld):
     def get_dimension_names(self) -> typing.Iterable[str]:
         return self.dim_to_id.keys()
 
-    def get_dimension_by_name(self, name: str) -> mcpython.common.world.AbstractInterface.IDimension:
+    def get_dimension_by_name(
+        self, name: str
+    ) -> mcpython.common.world.AbstractInterface.IDimension:
         return self.dimensions[self.dim_to_id[name]]
 
     def add_dimension(
